--- a/.github/workflows/LibraryBuild.yml
+++ b/.github/workflows/LibraryBuild.yml
@@ -52,10 +52,11 @@ jobs:
           - ATTinyCore:avr:attinyx4
           - ATTinyCore:avr:attinyx41
           - ATTinyCore:avr:attinyx5
+          - ATTinyCore:avr:attiny26
           - ATTinyCore:avr:attinyx61
           - ATTinyCore:avr:attinyx7
           - ATTinyCore:avr:attinyx8
-          - ATTinyCore:avr:attiny43
+       #   - ATTinyCore:avr:attiny43
           - ATTinyCore:avr:attiny1634
           - ATTinyCore:avr:attiny828
           - MightyCore:avr:1284
@@ -70,6 +71,8 @@ jobs:
           - arduino-boards-fqbn: ATTinyCore:avr:attinyx41
             platform-url: http://drazzy.com/package_drazzy.com_index.json
           - arduino-boards-fqbn: ATTinyCore:avr:attinyx5
+            platform-url: http://drazzy.com/package_drazzy.com_index.json
+          - arduino-boards-fqbn: ATTinyCore:avr:attiny26
             platform-url: http://drazzy.com/package_drazzy.com_index.json
           - arduino-boards-fqbn: ATTinyCore:avr:attinyx61
             platform-url: http://drazzy.com/package_drazzy.com_index.json
