--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=Vcc
 version=2.2.0
 author=Bernhard Nebel
 maintainer=Bernhard Nebel
-sentence=Measure supply voltage (using optinally stored calibration value)
+sentence=Measure supply voltage (using optionally a stored calibration value)
 paragraph=
 category=Sensors
 url=https://github.com/felias-fogg/Vcc
