--- a/.github/workflows/LibraryBuild.yml
+++ b/.github/workflows/LibraryBuild.yml
@@ -61,31 +61,32 @@ jobs:
           - ATTinyCore:avr:attiny828
           - MightyCore:avr:1284
           - MightyCore:avr:164
+          - MegaCore:avr:2561
 
         # Choose the right platform for the boards we want to test. (maybe in the future Arduino will automatically do this for you)
         # With sketches-exclude you may exclude specific examples for a board. Use a comma separated list.
         #############################################################################################################
         include:
-          - arduino-boards-fqbn: ATTinyCore:avr:attinyx4
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attinyx41
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attinyx5
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          # - arduino-boards-fqbn: ATTinyCore:avr:attiny26
-          #  platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attinyx61
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attinyx7
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attinyx8
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          # - arduino-boards-fqbn: ATTinyCore:avr:attiny43
-          #  platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attiny1634
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
-          - arduino-boards-fqbn: ATTinyCore:avr:attiny828
-            platform-url: http://drazzy.com/package_drazzy.com_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attinyx4
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attinyx41
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attinyx5
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          # - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attiny26
+          #  platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attinyx61
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attinyx7
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attinyx8
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          # - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attiny43
+          #  platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attiny1634
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
+          - arduino-boards-fqbn: ATTinyCore-debug-enabled:avr:attiny828
+            platform-url: https://downloads.pyavrocd.io/package_debug_enabled_index.json
           - arduino-boards-fqbn:  MiniCore:avr:8
             platform-url: https://mcudude.github.io/MiniCore/package_MCUdude_MiniCore_index.json
           - arduino-boards-fqbn:  MiniCore:avr:88
@@ -96,6 +97,8 @@ jobs:
             platform-url: https://mcudude.github.io/MightyCore/package_MCUdude_MightyCore_index.json
           - arduino-boards-fqbn:  MightyCore:avr:164
             platform-url: https://mcudude.github.io/MightyCore/package_MCUdude_MightyCore_index.json
+          - arduino-boards-fqbn:  MegaCore:avr:2561
+            platform-url: https://mcudude.github.io/MegaCore/package_MCUdude_MegaCore_index.json
 
       # Do not cancel all jobs / architectures if one job fails
       fail-fast: false
