--- a/.github/workflows/LibraryBuild.yml
+++ b/.github/workflows/LibraryBuild.yml
@@ -49,16 +49,16 @@ jobs:
           - MiniCore:avr:8
           - MiniCore:avr:88
           - MiniCore:avr:168
-          - ATTinyCore:avr:attinyx4
-          - ATTinyCore:avr:attinyx41
-          - ATTinyCore:avr:attinyx5
-       #   - ATTinyCore:avr:attiny26
-          - ATTinyCore:avr:attinyx61
-          - ATTinyCore:avr:attinyx7
-          - ATTinyCore:avr:attinyx8
-       #   - ATTinyCore:avr:attiny43
-          - ATTinyCore:avr:attiny1634
-          - ATTinyCore:avr:attiny828
+          - ATTinyCore-debug-enabled:avr:attinyx4
+          - ATTinyCore-debug-enabled:avr:attinyx41
+          - ATTinyCore-debug-enabled:avr:attinyx5
+       #   - ATTinyCore-debug-enabled:avr:attiny26
+          - ATTinyCore-debug-enabled:avr:attinyx61
+          - ATTinyCore-debug-enabled:avr:attinyx7
+          - ATTinyCore-debug-enabled:avr:attinyx8
+       #   - ATTinyCore-debug-enabled:avr:attiny43
+          - ATTinyCore-debug-enabled:avr:attiny1634
+          - ATTinyCore-debug-enabled:avr:attiny828
           - MightyCore:avr:1284
           - MightyCore:avr:164
           - MegaCore:avr:2561
